# xiaozhi-secretary

./: .gitignore  .plan.md  README.md  index.html  mockup.html  package-lock.json  package.json  tsconfig.json  vite.config.ts  主题要求.md  图片工具设计文档.md
.github/workflows/: build.yml  qodana_code_quality.yml
docs/: json-assistant-analysis.md
harmonyos/: README.md  build-profile.json5  oh-package.json5
harmonyos/AppScope/: app.json5
harmonyos/entry/: hvigorfile.ts  oh-package.json5
harmonyos/hvigor/: hvigor-config.json5
mobile/: README.md  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
mobile/src/: App.vue
mobile/src-tauri/: AndroidManifest.toml  Cargo.toml  tauri.conf.json
mobile/src-tauri/capabilities/: default.json
mobile/src-tauri/icons/: icon.icns
mobile/src-tauri/src/: lib.rs  main.rs
mobile/src-tauri/src/commands/: export_pdf.rs  file_dialog.rs
src/: App.vue
src-tauri/: Cargo.toml  document.docx  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/releases/Image to Document.app/Contents/: Info.plist
src-tauri/src/: lib.rs  main.rs
src-tauri/src/commands/: export_pdf.rs  file_dialog.rs  http_request.rs  maven_builder.rs  mod.rs  system.rs
src/assets/: main.css
src/components/: AppHeader.vue  DocumentPreview.vue  ExportPanel.vue  HomePage.vue  ImageList.vue  LayoutPicker.vue  LayoutThumbnail.vue  PageSettings.vue  PageThumbnails.vue  PreviewToolbar.vue  StatusBar.vue  ToolBackground.vue  ToolboxNav.vue  TopBar.vue
src/composables/: useExport.ts  useGlassEffect.ts  useImages.ts  useLayout.ts  (+3 more)
(+183 files in other folders)
