[package]
name = "xiaozhi-image-layout"
version = "0.1.0"
description = "Image Layout Tool for Mobile"
authors = ["wzq"]
edition = "2021"

[lib]
name = "xiaozhi_image_layout_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["protocol-asset"] }
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
image = "0.25"
base64 = "0.22"
